force-app/main/default/objects/Foo__c/Foo__c.object-meta.xml
<CustomObject>
    <label>Foo</label>
    <nameField>
        <label>Foo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Foos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>