force-app/main/default/objects/Foo__c/fields/Bar__c.field-meta.xml
<CustomField>
    <fullName>Bar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bar</label>
    <type>Checkbox</type>
</CustomField>