force-app/main/default/objects/Foo__c/fields/DontTouchMe__c.field-meta.xml
<CustomField>
    <fullName>DontTouchMe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DontTouchMe</label>
    <type>Checkbox</type>
</CustomField>