force-app/main/default/objects/Foo__c/fields/NewCheckbox__c.field-meta.xml
<CustomField>
    <fullName>NewCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NewCheckbox</label>
    <type>Checkbox</type>
</CustomField>